--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="container">
         <img src="./images/tumblr_f034fbff85213f0da3c6387bf1762312_36b8e98c_640.jpg" alt="Foto de Alisson">
         <h1>Alisson Faundes</h1>
-        <p>Desenvolvedor de Software | Frontend Minimalista</p>
+        <p>Desenvolvedor de Software | Frontend | Dev em ascenção</p>
         <div class="links">
             <a href="https://www.linkedin.com/in/alisson-fagundes-b40634364/">LinkedIn</a>
             <a href="https://github.com/AlissonACF">GitHub</a>
