--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
     <div class="container">
         <img src="./images/IMG_20250522_145021.jpg" alt="Foto de Alisson">
-        <h1>Alisson Faundes</h1>
+        <h1>Alisson Fagundes</h1>
         <p>Desenvolvedor de Software | Frontend | Dev em ascenção</p>
         <div class="links">
             <a href="https://www.linkedin.com/in/alisson-fagundes-b40634364/">LinkedIn</a>
